Colab을 통해 생성됨

--- a/project_week1_파이썬프로젝트.ipynb
+++ b/project_week1_파이썬프로젝트.ipynb
@@ -460,11 +460,11 @@
         "\n",
         "message = MIMEMultipart()\n",
         "# 이메일 발신자\n",
-        "sender_email = \"jiyeong3141592@gmail.com\"\n",
+        "sender_email = \"abc@gmail.com\"\n",
         "message[\"From\"] = sender_email\n",
         "\n",
         "# 이메일 수신자\n",
-        "recipient_email = \"samjiyeong562@gmail.com\"\n",
+        "recipient_email = \"sss@gmail.com\"\n",
         "message[\"To\"] = recipient_email"
       ],
       "metadata": {
@@ -479,10 +479,10 @@
         "from email.mime.text import MIMEText\n",
         "\n",
         "# 이메일 제목\n",
-        "message[\"Subject\"] = \"1주차 프로젝트 답안\"\n",
+        "message[\"Subject\"] = \"1주차 프로젝트\"\n",
         "\n",
         "# 이메일 내용\n",
-        "body = \"안녕하세요.\\n1주차 프로젝트 답안 파일 첨부합니다.\"\n",
+        "body = \"안녕하세요.\\n1주차 프로젝트 파일 첨부합니다.\"\n",
         "message.attach(MIMEText(body, \"plain\"))"
       ],
       "metadata": {
