--- a/week1/project_week1_파이썬프로젝트.ipynb
+++ b/week1/project_week1_파이썬프로젝트.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hamsungmin/DataTrainAnalysis/blob/main/project_week1_%ED%8C%8C%EC%9D%B4%EC%8D%AC%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/hamsungmin/DataTrainAnalysis/blob/main/week1/project_week1_%ED%8C%8C%EC%9D%B4%EC%8D%AC%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -443,10 +443,8 @@
       "cell_type": "markdown",
       "source": [
         "### 목표7\n",
-        "목표6에서 저장한 텍스트 파일을 Python을 이용하여 이메일에 첨부하고 이메일 제목을 '1주차 프로젝트 답안 (<수강생 성함>)'형식으로 지정 후 samjiyeong562@gmail.com 주소로 전송해주세요\n",
-        "</br>\n",
-        "※ 이메일 제목 예시: 1주차 프로젝트 답안 (장지영)\n",
-        "</br>\n",
+        "목표6에서 저장한 텍스트 파일을 Python을 이용하여 이메일에 첨부하고 이메일 전송해주세요\n",
+        "\n",
         "※ 권장 라이브러리: smtplib, email"
       ],
       "metadata": {
